@@ -27,9 +27,9 @@
 
 #if !LOG_DISABLED
 
-WTFLogChannel LogSessionState = { 0x00000001, "WebKit2LogLevel", WTFLogChannelOn };
-WTFLogChannel LogContextMenu  = { 0x00000002, "WebKit2LogLevel", WTFLogChannelOn };
-WTFLogChannel LogTextInput    = { 0x00000003, "WebKit2LogLevel", WTFLogChannelOn };
+WTFLogChannel LogSessionState = { 0x00000001, "WebKit2LogLevel", WTFLogChannelOff };
+WTFLogChannel LogContextMenu  = { 0x00000002, "WebKit2LogLevel", WTFLogChannelOff };
+WTFLogChannel LogTextInput    = { 0x00000003, "WebKit2LogLevel", WTFLogChannelOff };
 
 static inline void initializeLogChannel(WTFLogChannel* channel)
 {
@@ -45,6 +45,7 @@ void initializeLogChannelsIfNecessary()
 
     initializeLogChannel(&LogContextMenu);
     initializeLogChannel(&LogSessionState);
+    initializeLogChannel(&LogTextInput);
 }
 
 #endif // LOG_DISABLED
